cli/hypercode-rs/tui2/src/chatwidget/snapshots/hypercode_tui2__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui2/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved hypercode to run echo hello world this time
